2001-02-23  Neil Jerram  <neil@ossau.uklinux.net>

	* dump.c (scm_binary_write, scm_binary_read), eval.c
	(scm_primitive_eval), guardians.c (scm_guardian_destroyed_p,
	scm_guardian_greedy_p, scm_make_guardian), fports.c
	(scm_file_port_p): Minor docstring fixes.

2001-02-22  Marius Vollmer  <mvo@zagadka.ping.de>

	* load.c (load): Use scm_primitive_eval_x instead of scm_i_eval_x.

	* goops.c (scm_add_method, DEFVAR): Use scm_eval instead of
	scm_i_eval.
	(make_class_from_template): Do not bother to set the current
	module around the call to DEFVAR, scm_eval takes care of that.
	(scm_init_goops): Make scm_module_goops and
	scm_goops_lookup_closure permanent objects.
	
	* eval.c (scm_ceval, scm_deval): When evaluating expressions on
	top level, create a fresh top-level environment for each
	expression instead of mutating the exisint frame.  This is
	important when that frame is closed over.

	* numbers.c (s_scm_logior) [SCM_DIGSTOOBIG]: Also use
	SCM_DIGSPERLONG instead of DIGSPERLONG.

2001-02-21  Marius Vollmer  <mvo@zagadka.ping.de>

	* eval.c (scm_ceval, scm_deval): Check for wrong number of args
	before applying arrow procedure in `cond' and before applying
	receiver procedure in call-with-current-continuation.
	(scm_i_eval): Do not invoke scm_copy_tree in argument in SCM_XEVAL
	macro.  The argument is expanded more than one time.

	* numbers.c (scm_logior) [SCM_DIGSTOOBIG]: Correctly use
	SCM_BIGDIG instead of BIGDIG.  Thanks to Steven G. Johnson!

2001-02-20  Marius Vollmer  <mvo@zagadka.ping.de>

	* guile-doc-snarf.in, guile-func-name-check.in: Added copyright
	notice and license.

>>>>>>> 1.1281
2001-02-17  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>

	* variable.c (scm_make_variable, scm_make_undefined_variable)
	(scm_variable_ref, scm_variable_set_x, scm_builtin_variable)
	(scm_variable_bound_p), values.c (scm_values)
	(scm_call_with_values), unif.c (scm_bit_count)
	(scm_bit_set_star_x), symbols.c (scm_gentemp)